# QuickLabeling

./: README.md  pfga_printer_log.txt  pfga_printer_log_last1000.txt  ql.config  quicklabel.sh  quicklabeling-workspace.code-workspace
OV9281_grabber_v1/: CMakeLists.txt  Makefile  grabber.cpp
imgen_gpio/: CMakeLists.txt  imgen.cpp
imgen_single/: CMakeLists.txt  simgen.cpp
ql/: CMakeLists.txt  Makefile  cmake_install.cmake  ql.cpp
tcp_client/: CMakeLists.txt  tcp_client.cpp
tcp_server/: CMakeLists.txt  tcp_server.cpp
